# euclid-credit-score-service

./: Cargo.toml  NOTICE
artifacts/: checksums.txt  credit_score.wasm
schema/: credit-score.json
src/: contract.rs  lib.rs  msg.rs  schema.rs  state.rs
