[package]
name = "credit-score"
version = "0.1.0"
authors = ["balasol <balaji.sol@solulab.co>"]
edition = "2021"

exclude = [
  "artifacts/*",
]

[lib]
name = "credit_score" # Setting library name to avoid hyphen issues
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = true
panic = 'abort'
rpath = false

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[package.metadata.scripts]
optimize = """docker run --rm \
  -e CARGO_TERM_COLOR=always \
  -v "$(pwd)":/code \
  -v "$(basename "$(pwd)")_cache":/code/target \
  -v "$(basename "$(pwd)")_registry_cache":/usr/local/cargo/registry \
  -v "$(basename "$(pwd)")_cosmwasm_sccache":/root/.cache/sccache \
  --name "$(basename "$(pwd)")" \
  cosmwasm/rust-optimizer:0.14.0
"""

[dependencies]
archway-bindings = "0.2.1"
cosmwasm-schema = "1.3.1"
cosmwasm-std = "1.3.1"
cosmwasm-storage = "1.3.1"
cw-storage-plus = "1.1.0"
cw2 = "1.1.0"
schemars = "0.8.12"
serde = { version = "1.0.183", default-features = false, features = ["derive"] }
thiserror = "1.0.44"
dotenv = "0.15.0"

[dev-dependencies]
cw-multi-test = "0.17.0"
